--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "license": "ISC",
   "description": "UMC Test Project",
   "dependencies": {
-    "express": "^5.0.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^5.0.0",
+    "http-status-codes": "^2.3.0",
+    "mysql2": "^3.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
