--- a/package.json
+++ b/package.json
@@ -105,6 +105,8 @@
     "sqlstring": "^2.3.3",
     "statuses": "^2.0.1",
     "supports-color": "^5.5.0",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1",
     "to-regex-range": "^5.0.1",
     "toidentifier": "^1.0.1",
     "touch": "^3.1.1",
