--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@quixo3/prisma-session-store": "^3.1.13",
     "accepts": "^2.0.0",
     "anymatch": "^3.1.3",
     "array-flatten": "^3.0.0",
