--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "parseurl": "^1.3.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-naver-v2": "^2.0.8",
     "path-to-regexp": "^8.2.0",
     "picomatch": "^2.3.1",
     "prisma": "^5.22.0",
