--- a/package.json
+++ b/package.json
@@ -131,6 +131,14 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "@tsconfig/node20": "^20.1.4",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.1",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
+    "@types/swagger-ui-express": "^4.1.7",
+    "nodemon": "^3.1.7",
+    "typescript": "^5.7.2"
   }
 }
