--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/swagger-ui-express": "^4.1.7",
     "nodemon": "^3.1.7",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   }
 }
